<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType= "centerCrop"
            android:alpha=".50"
            android:src="@drawable/quiz_picture" />

        <TextView
            android:id="@+id/question_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif-black"
            android:text="@string/question_1"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/bones_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below ="@id/question_1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/femur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="bonesGroupClicked"
                android:text="@string/femur"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/ulna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="bonesGroupClicked"
                android:text="@string/ulna"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/tibia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="bonesGroupClicked"
                android:text="@string/tibia"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/humorous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="bonesGroupClicked"
                android:text="@string/humorous_bone"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/scapula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="bonesGroupClicked"
                android:text="@string/scapula"
                android:textSize="20sp" />


        </RadioGroup>

        <TextView
            android:id="@+id/question_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_below = "@id/bones_group"
            android:fontFamily="sans-serif-black"
            android:text="@string/question_2"
            android:textSize="24sp" />


        <CheckBox
            android:id="@+id/metatarsus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_below = "@id/question_2"
            android:onClick="metatarsusClick"
            android:text="@string/metatarsus"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/metacarpus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below = "@id/metatarsus"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:onClick="metacarpusClick"
            android:text="@string/metacarpus"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/calyx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_below = "@id/metacarpus"
            android:onClick="calyxClick"
            android:text="@string/calyx"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/hallux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_below = "@id/calyx"
            android:onClick="halluxClick"
            android:text="@string/hallux"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/scaphoid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_below = "@id/hallux"
            android:onClick="scaphoidClick"
            android:text="@string/scaphoid"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/question_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-black"
            android:layout_below = "@id/scaphoid"
            android:text="@string/question_3"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/spine_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below = "@id/question_3"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/skull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="spineGroupClicked"
                android:text="@string/skull"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/neck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="spineGroupClicked"
                android:text="@string/neck"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/upper_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="spineGroupClicked"
                android:text="@string/upper_back"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/lower_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="spineGroupClicked"
                android:text="@string/lower_back"
                android:textSize="20sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/question_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_below = "@id/spine_group"
            android:fontFamily="sans-serif-black"
            android:text="@string/question_4"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/eye_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_below = "@id/question_4"
            android:hint="@string/answer_here"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/question_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_below = "@id/eye_answer"
            android:fontFamily="sans-serif-black"
            android:text="@string/question_5"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/breathing_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below = "@id/question_5"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/tachycardia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="fastGroupClicked"
                android:text="@string/tachycardia"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/tachyphasia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="fastGroupClicked"
                android:text="@string/tachyphasia"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/tachyphrenia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="fastGroupClicked"
                android:text="@string/tachyphrenia"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/tachypnoea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="fastGroupClicked"
                android:text="@string/tachypnoea"
                android:textSize="20sp" />

        </RadioGroup>


        <TextView
            android:id="@+id/question_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_below = "@id/breathing_group"
            android:fontFamily="sans-serif-black"
            android:text="@string/question_6"
            android:textSize="24sp" />


        <RadioGroup
            android:id="@+id/heart_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below = "@id/question_6"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/caecum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="heartGroupClicked"
                android:text="@string/caecum"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/macula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="heartGroupClicked"
                android:text="@string/macula"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/Sinoatrial_node"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="heartGroupClicked"
                android:text="@string/sinoatrial"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/Islets_of_langerhans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="heartGroupClicked"
                android:text="@string/islets"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/Sphincter_of_oddi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="heartGroupClicked"
                android:text="@string/oddi"
                android:textSize="20sp" />

        </RadioGroup>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below = "@id/heart_group"
            android:layout_marginTop="96dp"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:onClick="submitAnswers"
            android:text="@string/submit_answers"
            android:textSize="24sp" />

        <Button
            android:id="@+id/resetQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_below = "@id/submit"
            android:onClick="reset_quiz"
            android:text="@string/reset"
            android:textSize="24sp" />


    </RelativeLayout>


</ScrollView>